--- a/Calculator.html
+++ b/Calculator.html
@@ -33,6 +33,6 @@
             <button type="button" onclick="display('0')">0</button>
             <button type="button" id="assignment" onclick="assignment()">=</button>
     </div>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
